some small changes in all html file like spelling correction, color changes etc.

--- a/career.html
+++ b/career.html
@@ -27,15 +27,16 @@
     <nav>
         <div class="navbar">
             <div class="logo">
-                <a href="#" id="logopic"><img src="logopic.png" alt="logo"></a>
+                <a href="index.html" id="logopic"><img src="logopic.png" alt="logo"></a>
             </div>
             <div class="nav-elements">
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#about">categories</a></li>
-                    <li><a href="#services">about-us</a></li>
-                    <li><a href="#portfolio">notes</a></li>
-                    <li><a href="#contact">Courses</a></li>
+                    <li><a href="index.html#categories">categories</a></li>
+                    <li><a href="index.html#about-us">about-us</a></li>
+                    <li><a href="#mca">MCA</a></li>
+                    <!-- <li><a href="#portfolio">notes</a></li> -->
+                    <!-- <li><a href="#contact">Courses</a></li> -->
                     <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -84,7 +85,7 @@
                             cloud
                             computing, or any other area of interest. This enhances your skill set and makes you stand
                             out.
-                            <b>check out our courses recomendetion :-</b> <a href="courses.html">click here</a>
+                            <br><b>check out our courses recomendetion :-</b> <a href="courses.html">click here</a>
                         </p>
 
                         <img src="career/skills.jpg" alt="">
@@ -147,9 +148,9 @@
                     for all things MCA.</p>
                 <h3>Detail of all entrance exam conducted by top universities all over India</h3>
                 <ul>
-                    <li>NIMCET (for nits)</li>
-                    <li>RMCAAT (for rajasthan universities)</li>
-                    <li>CUET (for central universities)</li>
+                    <li>NIMCET (for NIT's)</li>
+                    <li>RMCAAT (for rajasthan universities like- MBM, etc.)</li>
+                    <li>CUET (for central universities like- JNU, DU, etc)</li>
                     <li>MAH CET (for maharastra universities)</li>
                     <li>JMI Entrance (for jamia university)</li>
                 </ul>
@@ -166,6 +167,20 @@
                         score 55% aggregate at graduation level.</li>
                     <li>Students must have a BCA degree from a recognized university.</li>
                 </ul>
+                <h3>Top 10 MCA College in India Based on 2024 Ranking</h3>
+                <ol>
+                    <li>Christ University, Bangalore, Karnataka</li>
+                    <li>NIT Trichy, Tiruchirappalli, Tamil Nadu</li>
+                    <li>NIT Warangal, Warangal Telangana</li>
+                    <li>Jawaharlal Nehru University - [JNU], New Delhi</li>
+                    <li>Delhi University - [DU], New Delhi</li>
+                    <li>Presidency College, Bangalore, Karnataka</li>
+                    <li>National Institute of Technology - [NITK], Surathkal, Karnataka</li>
+                    <li>University of Hyderabad - [UOH], Hyderabad, Telangana</li>
+                    <li>Motilal Nehru National Institute of Technology - [MNNIT], Allahabad, Uttar Pradesh</li>
+                    <li>Jamia Millia Islamia University-[JMI], New Delhi</li>
+                </ol>
+                <p>Honourable Mention :- MBM University, Jodhpur</p>
             </div>
         </main>
     </section>
@@ -177,7 +192,7 @@
     <section class="footer" style="top: 0;">
         <div class="footer-wrapper">
             <div class="section1">
-                <a href="#"><img src="logopic.png" alt="logo"></a>
+                <a href="index.html"><img src="logopic.png" alt="logo"></a>
                 <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
                     reflect on the year-long practical project, we take pride in the seamless integration of
                     cutting-edge technologies and user-centric design</p>
@@ -194,11 +209,12 @@
                         links
                     </h2>
                     <ul>
-                        <li><a href="#home">home</a></li>
-                        <li><a href="#categories">categories</a></li>
-                        <li><a href="#about-us">about-us</a></li>
-                        <li><a href="#">notes</a></li>
-                        <li><a href="courses.html">courses</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#categories">categories</a></li>
+                        <li><a href="index.html#about-us">about-us</a></li>
+                        <!-- <li><a href="career.html#mca">MCA</a></li> -->
+                        <!-- <li><a href="#">notes</a></li> -->
+                        <!-- <li><a href="courses.html">courses</a></li> -->
                         <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     </ul>
                 </div>
