--- a/courses.html
+++ b/courses.html
@@ -31,10 +31,11 @@
             <div class="nav-elements">
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#about">categories</a></li>
-                    <li><a href="#services">about-us</a></li>
-                    <li><a href="#portfolio">notes</a></li>
-                    <li><a href="#contact">Courses</a></li>
+                    <li><a href="index.html#categories">categories</a></li>
+                    <li><a href="index.html#about-us">about-us</a></li>
+                    <!-- <li><a href="notes.html">notes</a></li> -->
+                    <!-- <li><a href="courses.html">Courses</a></li> -->
+                    <li><a href="career.html#mca">MCA</a></li>
                     <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -47,7 +48,7 @@
     <section class="career">
         <div class="head-er">
             <div class="header-content">
-                <h1><span id="yellowish">COURSES</span></h1>
+                <h1>Improve your skills with these <span id="yellowish">Courses</span></h1>
                 <p>Explore a diverse range of courses designed to empower and inspire learners of all backgrounds.
                     Whether you're a seasoned professional seeking to sharpen your skills or a curious beginner eager to
                     delve into a new field, our carefully curated selection of courses awaits you. From cutting-edge
@@ -399,7 +400,7 @@
             </li>
             <li class="cards_item">
                 <div class="card">
-                    <div class="card_image"><img src="courses/python.png"></div>
+                    <div class="card_image"><img src="courses/python.jpg"></div>
                     <div class="card_content">
                         <h2 class="card_title">programming in python </h2>
                         <p class="card_text">from basic to advance</p>
@@ -409,7 +410,7 @@
             </li>
             <li class="cards_item">
                 <div class="card">
-                    <div class="card_image"><img src="courses/msoffice.png"></div>
+                    <div class="card_image"><img src="courses/msoffice.jpg"></div>
                     <div class="card_content">
                         <h2 class="card_title">microsoft office</h2>
                         <p class="card_text">from basic to advance</p>
@@ -452,11 +453,12 @@
                         links
                     </h2>
                     <ul>
-                        <li><a href="#home">home</a></li>
-                        <li><a href="#categories">categories</a></li>
-                        <li><a href="#about-us">about-us</a></li>
-                        <li><a href="#">notes</a></li>
-                        <li><a href="courses.html">courses</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#categories">categories</a></li>
+                        <li><a href="index.html#about-us">about-us</a></li>
+                        <!-- <li><a href="notes.html">notes</a></li> -->
+                        <!-- <li><a href="courses.html">Courses</a></li> -->
+                        <li><a href="career.html#mca">MCA</a></li>
                         <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     </ul>
                 </div>
