--- a/iindex.html
+++ b/iindex.html
@@ -30,15 +30,16 @@
             <nav>
                 <div class="navbar">
                     <div class="logo">
-                        <a href="#" id="logopic"><img src="logopic.png" alt="logo"></a>
+                        <a href="index.html" id="logopic"><img src="logopic.png" alt="logo"></a>
                     </div>
                     <div class="nav-elements">
                         <ul id="sidemenu">
-                            <li><a href="#header">Home</a></li>
-                            <li><a href="#about">categories</a></li>
-                            <li><a href="#services">about-us</a></li>
-                            <li><a href="notes.html">notes</a></li>
-                            <li><a href="courses.html">Courses</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="#categories">categories</a></li>
+                            <li><a href="#about-us">about-us</a></li>
+                            <!-- <li><a href="notes.html">notes</a></li> -->
+                            <!-- <li><a href="courses.html">Courses</a></li> -->
+                            <li><a href="career.html#mca">MCA</a></li>
                             <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                         </ul>
@@ -180,7 +181,7 @@
             <div class="team-card card2">
                 <div class="team-img" id="pic4"></div>
                 <div class="team-content">
-                    <h1>Mohd Aadil</h1>
+                    <h1>Aadil</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/siddiquiaaqalb?igsh=MzRlODBiNWFlZA==">
@@ -203,7 +204,7 @@
             <div class="team-card card3">
                 <div class="team-img" id="pic1"></div>
                 <div class="team-content">
-                    <h1>Mohd sahil</h1>
+                    <h1>Sahil</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/y.sahilll?igsh=YzVkODRmOTdmMw==">
@@ -226,7 +227,7 @@
             <div class="team-card card4">
                 <div class="team-img" id="pic2"></div>
                 <div class="team-content">
-                    <h1>Mohd Arman</h1>
+                    <h1>Arman</h1>
                     <h3>batch: 2021-24</h3>
                     <ul id="socialid">
                         <a href="https://www.instagram.com/armaan_19?igsh=MzRlODBiNWFlZA==">
@@ -255,7 +256,7 @@
     <section class="footer">
         <div class="footer-wrapper">
             <div class="section1">
-                <a href="#"><img src="logopic.png" alt="logo"></a>
+                <a href="index.html"><img src="logopic.png" alt="logo"></a>
                 <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
                     reflect on the year-long practical project, we take pride in the seamless integration of
                     cutting-edge technologies and user-centric design</p>
@@ -272,11 +273,12 @@
                         links
                     </h2>
                     <ul>
-                        <li><a href="#home">home</a></li>
+                        <li><a href="index.html">home</a></li>
                         <li><a href="#categories">categories</a></li>
                         <li><a href="#about-us">about-us</a></li>
-                        <li><a href="#">notes</a></li>
-                        <li><a href="courses.html">courses</a></li>
+                        <li><a href="career.html#mca">MCA</a></li>
+                        <!-- <li><a href="#">notes</a></li> -->
+                        <!-- <li><a href="courses.html">courses</a></li> -->
                         <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
                     </ul>
                 </div>
@@ -293,9 +295,10 @@
             <div class="section3">
                 <h2>teachnologies</h2>
                 <ul>
-                    <li>html</li>
-                    <li>css</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
                     <li>javascript</li>
+                    <li>bootstrap</li>
                     <li>react-js</li>
                 </ul>
 
