--- a/notes.html
+++ b/notes.html
@@ -17,8 +17,8 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <!-- ======== fontawesome ====== -->
   <script src="https://kit.fontawesome.com/484d1ff7e0.js" crossorigin="anonymous"></script>
-    <!-- ======== web icon ====== -->
-    <link rel="website icon" href="webicon.png" type="png">
+  <!-- ======== web icon ====== -->
+  <link rel="website icon" href="webicon.png" type="png">
   <title>ACERS</title>
 </head>
 
@@ -27,15 +27,16 @@
   <nav>
     <div class="navbar">
       <div class="logo">
-        <a href="#" id="logopic"><img src="logopic.png" alt="logo"></a>
+        <a href="index.html" id="logopic"><img src="logopic.png" alt="logo"></a>
       </div>
       <div class="nav-elements">
         <ul id="sidemenu">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about">categories</a></li>
-          <li><a href="#services">about-us</a></li>
-          <li><a href="#portfolio">notes</a></li>
-          <li><a href="#contact">Courses</a></li>
+          <li><a href="index.html#categories">categories</a></li>
+          <li><a href="index.html#about-us">about-us</a></li>
+          <li><a href="career.html#mca">MCA</a></li>
+          <!-- <li><a href="#portfolio">notes</a></li> -->
+          <!-- <li><a href="#contact">Courses</a></li> -->
           <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
           <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
@@ -49,7 +50,7 @@
     <div class="head-er">
       <div class="header-content">
         <h1>All subject-wise <span class="yellowish">notes</span></h1>
-        <p>Welcome to <b style="color: #f8b81f;">ACERS</b>, your one-stop destination for comprehensive BCA (Bachelor of
+        <p>Welcome to <b style="color: #1ab79d;">ACERS</b>, your one-stop destination for comprehensive BCA (Bachelor of
           Computer Applications)
           hand-written notes.Elevate your learning experience with our organized repository, designed to
           aid BCA students in mastering their coursework. Access high-quality notes at your fingertips, covering a range
@@ -70,7 +71,8 @@
               <div class="card_content">
                 <h2 class="card_title">Computer system architecture</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1Cuk58i6Pqg4AktZksX1AbNoBTQhEl3PL?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Cuk58i6Pqg4AktZksX1AbNoBTQhEl3PL?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -80,7 +82,8 @@
               <div class="card_content">
                 <h2 class="card_title">DataBase management system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1g_Go94tKLYGXSo1_w8mOi_HwT4Q1znm_?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1g_Go94tKLYGXSo1_w8mOi_HwT4Q1znm_?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -100,7 +103,8 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1HVW6YOyh1sVjicQzSRgt9I1Q1RxdBzWI?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1HVW6YOyh1sVjicQzSRgt9I1Q1RxdBzWI?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -110,7 +114,8 @@
               <div class="card_content">
                 <h2 class="card_title">Programming with c++</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1zDesoqZSRPqMowssutDAcm_ezJOEBvPf?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1zDesoqZSRPqMowssutDAcm_ezJOEBvPf?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -130,7 +135,8 @@
               <div class="card_content">
                 <h2 class="card_title">multimedia</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1FpZEITQ4HARt5hJjpdSVUIxYui8suG2v?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1FpZEITQ4HARt5hJjpdSVUIxYui8suG2v?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -140,7 +146,8 @@
               <div class="card_content">
                 <h2 class="card_title">java</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1DFESGXuJfj12weAOe5RbcqNuCOI2wnW-?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1DFESGXuJfj12weAOe5RbcqNuCOI2wnW-?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -150,7 +157,8 @@
               <div class="card_content">
                 <h2 class="card_title">data structure and algorithm</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1MVhg4rABxUKprup-WE1uq5F98IB_Hbjp?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1MVhg4rABxUKprup-WE1uq5F98IB_Hbjp?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -160,7 +168,8 @@
               <div class="card_content">
                 <h2 class="card_title">digital electronics</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1-q9BeETHAwFj17NbQAJgyPULxwk1EmPZ?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1-q9BeETHAwFj17NbQAJgyPULxwk1EmPZ?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -170,7 +179,8 @@
               <div class="card_content">
                 <h2 class="card_title">internet technology</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1memLq2rvp2wl8JhYjNBJQ59ek6FG97B5?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1memLq2rvp2wl8JhYjNBJQ59ek6FG97B5?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -180,7 +190,8 @@
               <div class="card_content">
                 <h2 class="card_title">computer network</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1icuMOF_Kk_jVZimUVAEPAywOJs2Octk6?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1icuMOF_Kk_jVZimUVAEPAywOJs2Octk6?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -190,7 +201,8 @@
               <div class="card_content">
                 <h2 class="card_title">communication skills</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1Jfwr_1aL1FRd2veVYSeGksQqLjOIoHEY?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1Jfwr_1aL1FRd2veVYSeGksQqLjOIoHEY?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -200,7 +212,8 @@
               <div class="card_content">
                 <h2 class="card_title">visual basic (vb.net)</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1nRG9c581r2bu66R9u3KErzEULDJxQEHt?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1nRG9c581r2bu66R9u3KErzEULDJxQEHt?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -210,7 +223,8 @@
               <div class="card_content">
                 <h2 class="card_title">operating system</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1pWu_J6Q68qySbgefE705-TYGL37tEC8l?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1pWu_J6Q68qySbgefE705-TYGL37tEC8l?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -220,7 +234,8 @@
               <div class="card_content">
                 <h2 class="card_title">fundamental of computer</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1rUiiMLUu051843TSkW9E195seP-u4Okr?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1rUiiMLUu051843TSkW9E195seP-u4Okr?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -230,7 +245,8 @@
               <div class="card_content">
                 <h2 class="card_title">system analysis and design</h2>
                 <p class="card_text">previous year question from (2016-2023)</p>
-                <a href="https://drive.google.com/drive/folders/1qsDP1blYm7Jgu4EV-uv7CAiOe9mmkB3z?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="https://drive.google.com/drive/folders/1qsDP1blYm7Jgu4EV-uv7CAiOe9mmkB3z?usp=sharing"
+                  style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -248,7 +264,7 @@
   <section class="footer" style="top: 0;">
     <div class="footer-wrapper">
       <div class="section1">
-        <a href="#"><img src="logopic.png" alt="logo"></a>
+        <a href="index.html"><img src="logopic.png" alt="logo"></a>
         <p> The development of ACERS has been a dynamic journey filled with innovation and dedication. As we
           reflect on the year-long practical project, we take pride in the seamless integration of
           cutting-edge technologies and user-centric design</p>
@@ -265,11 +281,12 @@
             links
           </h2>
           <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#categories">categories</a></li>
-            <li><a href="#about-us">about-us</a></li>
-            <li><a href="#">notes</a></li>
-            <li><a href="courses.html">courses</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#categories">categories</a></li>
+            <li><a href="index.html#about-us">about-us</a></li>
+            <li><a href="career.html#mca">MCA</a></li>
+            <!-- <li><a href="#">notes</a></li> -->
+            <!-- <li><a href="courses.html">courses</a></li> -->
             <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
           </ul>
         </div>
