--- a/pyq.html
+++ b/pyq.html
@@ -34,10 +34,11 @@
         <div class="nav-elements">
           <ul id="sidemenu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#about">categories</a></li>
-            <li><a href="#services">about-us</a></li>
-            <li><a href="#portfolio">notes</a></li>
-            <li><a href="#contact">Courses</a></li>
+            <li><a href="index.html#categories">categories</a></li>
+            <li><a href="index.html#about-us">about-us</a></li>
+            <li><a href="career.html#mca">MCA</a></li>
+            <!-- <li><a href="#portfolio">notes</a></li> -->
+            <!-- <li><a href="#contact">Courses</a></li> -->
             <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
@@ -63,7 +64,7 @@
 
     <div class="all-pdf">
       <div class="main">
-        <h1 id="pyq-heading">all subject-wisw previous year <span class="yellowish">questions Papers</span></h1>
+        <h1 id="pyq-heading">all subject-wise previous year <span class="yellowish">questions Papers</span></h1>
         <ul class="cards">
           <li class="cards_item">
             <div class="card">
@@ -274,11 +275,12 @@
             links
           </h2>
           <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#categories">categories</a></li>
-            <li><a href="#about-us">about-us</a></li>
-            <li><a href="#">notes</a></li>
-            <li><a href="courses.html">courses</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#categories">categories</a></li>
+            <li><a href="index.html#about-us">about-us</a></li>
+            <li><a href="career.html#mca">MCA</a></li>
+            <!-- <li><a href="#">notes</a></li> -->
+            <!-- <li><a href="courses.html">courses</a></li> -->
             <button class="contact-us" onclick="window.location.href='contactus.html';">contact-us</button>
           </ul>
         </div>
