--- a/career.html
+++ b/career.html
@@ -146,7 +146,7 @@
                     of Computer Applications (MCA). Whether you're a BCA graduate aiming to elevate your skills or a
                     tech enthusiast ready to delve into the dynamic world of computing, this page is your go-to resource
                     for all things MCA.</p>
-                <h3>Detail of all entrance exam conducted by top universities all over India</h3>
+                <h3>Details of MCA entrance exams conducted by top universities all over India</h3>
                 <ul>
                     <li>NIMCET (for NIT's)</li>
                     <li>RMCAAT (for rajasthan universities like- MBM, etc.)</li>
@@ -154,7 +154,7 @@
                     <li>MAH CET (for maharastra universities)</li>
                     <li>JMI Entrance (for jamia university)</li>
                 </ul>
-                <h3>there are four main topic that you have to learn to crack these entrance exam:-</h3>
+                <h3>four main topic that you have to learn to crack these entrance exam:-</h3>
                 <ol>
                     <li>Maths</li>
                     <li>Reasoning and Quantative Aptitude</li>
@@ -180,7 +180,7 @@
                     <li>Motilal Nehru National Institute of Technology - [MNNIT], Allahabad, Uttar Pradesh</li>
                     <li>Jamia Millia Islamia University-[JMI], New Delhi</li>
                 </ol>
-                <p>Honourable Mention :- MBM University, Jodhpur</p>
+                <p>Honourable Mention :- JNVU University, Jodhpur</p>
             </div>
         </main>
     </section>
