--- a/contactus.html
+++ b/contactus.html
@@ -87,13 +87,13 @@
                                 <h2 class="sub-title">Connect With Us</h2>
 
                                 <label for="name"></label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Your Name"
+                                <input type="text" class="form-control" id="name" name="Name" placeholder="Your Name"
                                     required />
                                 <label for="email"></label>
-                                <input type="email" class="form-control" id="email" name="email"
+                                <input type="email" class="form-control" id="email" name="Email"
                                     placeholder="Your Email" />
                                 <label for="message"></label>
-                                <textarea id="message" class="form-control" rows="4" name="message"
+                                <textarea id="message" class="form-control" rows="4" name="Message"
                                     placeholder="Enter Your Query"></textarea>
                                 <button>
                                     <div class="svg-wrapper-1">
@@ -174,6 +174,17 @@
         </div>
     </section>
 
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwLoeN3ZnznkOKzqxRZRxLZCiV4-X_9rcVchZLCwfD0OhzFUrJpzq0NnNQ7kOQKvgyL/exec'
+        const form = document.forms['submit-to-google-sheet']
+      
+        form.addEventListener('submit', e => {
+          e.preventDefault()
+          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => console.log('Success!', response))
+            .catch(error => console.error('Error!', error.message))
+        })
+      </script>
 </body>
 <script src="app.js"></script>
 
