--- a/pyq.html
+++ b/pyq.html
@@ -72,7 +72,7 @@
               <div class="card_content">
                 <h2 class="card_title">web technology</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/1Sdeit4q1X12zAVo3-zv4TQCqnpOuPzv7?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Web Technologies.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -82,7 +82,7 @@
               <div class="card_content">
                 <h2 class="card_title">multimedia</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/1tbuKx6q_QDtvVwFu4nFu-v0iHspgqaGC?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Multimedia.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -92,7 +92,7 @@
               <div class="card_content">
                 <h2 class="card_title">java</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/1zOOz5RzatDrm60qeppwJLdEG0SSgHRD9?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Java.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -102,7 +102,7 @@
               <div class="card_content">
                 <h2 class="card_title">system analysis and design</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/1We1Og4WcwCNaeIJdx2qThzbZl3ioO2Wh?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/SAD.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -112,7 +112,7 @@
               <div class="card_content">
                 <h2 class="card_title">computer network</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/1izlcniPhbifTPNP8uYoT4sZgRAiSOMW8?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Computer Network.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
@@ -122,7 +122,7 @@
               <div class="card_content">
                 <h2 class="card_title">communication skills</h2>
                 <p class="card_text">previous year question from (2017-2022 )</p>
-                <a href="https://drive.google.com/drive/folders/11C15MsOaTI3mC--q_j_qjyScru7nPaU7?usp=sharing" style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
+                <a href="old papers/Communication Skills.pdf" download style="text-decoration: none;"><button class="btn card_btn">Get PDF File</button></a>
               </div>
             </div>
           </li>
