--- a/index.html
+++ b/index.html
@@ -153,7 +153,32 @@
     <section class="team" id="categories">
         <h3 class="team-heading">meet the team</h3>
         <div class="team-cards">
-            <div class="team-card card1">
+
+            <div class="team-card card3">
+                <div class="team-img" id="pic1"></div>
+                <div class="team-content">
+                    <h1>Sahil</h1>
+                    <h3>batch: 2021-24</h3>
+                    <ul id="socialid">
+                        <a href="https://www.instagram.com/y.sahilll?igsh=YzVkODRmOTdmMw==">
+                            <li><i class='bx bxl-instagram'></i></li>
+                        </a>
+                        <a href="https://github.com/Sahill85">
+                            <li><i class='bx bxl-github'></i></li>
+                        </a>
+                        <a href="www.linkedin.com/in/mohammad-sahil-731309248">
+                            <li><i class='bx bxl-linkedin'></i></li>
+                        </a>
+                    </ul>
+                    <div class="team-buttons">
+                        <button id="sahil">portfolio</button>
+                        <!-- <button>resume</button> -->
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- <div class="team-card card1">
                 <div class="team-img" id="pic3"></div>
                 <div class="team-content">
                     <h1>Ismail</h1>
@@ -172,11 +197,10 @@
                     </ul>
                     <div class="team-buttons">
                         <button id="openButton">portfolio</button>
-                        <!-- <button>resume</button> -->
                     </div>
-
                 </div>
-            </div>
+            </div> -->
+
 
             <div class="team-card card2">
                 <div class="team-img" id="pic4"></div>
@@ -201,30 +225,8 @@
 
                 </div>
             </div>
-            <div class="team-card card3">
-                <div class="team-img" id="pic1"></div>
-                <div class="team-content">
-                    <h1>Sahil</h1>
-                    <h3>batch: 2021-24</h3>
-                    <ul id="socialid">
-                        <a href="https://www.instagram.com/y.sahilll?igsh=YzVkODRmOTdmMw==">
-                            <li><i class='bx bxl-instagram'></i></li>
-                        </a>
-                        <a href="https://github.com/Sahill85">
-                            <li><i class='bx bxl-github'></i></li>
-                        </a>
-                        <a href="www.linkedin.com/in/mohammad-sahil-731309248">
-                            <li><i class='bx bxl-linkedin'></i></li>
-                        </a>
-                    </ul>
-                    <div class="team-buttons">
-                        <button id="sahil">portfolio</button>
-                        <!-- <button>resume</button> -->
-                    </div>
 
-                </div>
-            </div>
-            <div class="team-card card4">
+            <!-- <div class="team-card card4">
                 <div class="team-img" id="pic2"></div>
                 <div class="team-content">
                     <h1>Arman</h1>
@@ -243,11 +245,10 @@
                     </ul>
                     <div class="team-buttons">
                         <button id="openButton">portfolio</button>
-                        <!-- <button>resume</button> -->
                     </div>
-
                 </div>
-            </div>
+            </div> -->
+
         </div>
     </section>
     </section>
